example now dependent on user home